tasks authors frontend

--- a/frontend/components/tasks/tasksTemplate.pug
+++ b/frontend/components/tasks/tasksTemplate.pug
@@ -43,8 +43,9 @@
 					.col-xs-8.end-xs.icon_bar 
 						i.fa.fa-comments-o(aria-hidden = "true")
 						file-wrapper(files = 'task.files', source-id = 'task._id')
-						i.fa.fa-pencil(aria-hidden = "true", ng-link = "['TaskUpdate', {id: task._id}]")
-						i.fa.fa-times(aria-hidden = "true", ng-click = "tasksctrl.deleteTask(task._id,$index)")
+						p {{window._injectedData.userId}}
+						i.fa.fa-pencil(aria-hidden = "true", ng-link = "['TaskUpdate', {id: task._id}]",ng-if="tasksctrl.isAuthor(task) || tasksctrl.isAdmin")
+						i.fa.fa-times(aria-hidden = "true", ng-click = "tasksctrl.deleteTask(task._id,$index)",ng-if="tasksctrl.isAuthor(task) || tasksctrl.isAdmin")
 		.wrapper_noTask.row.center-xs(ng-if = "!tasksctrl.tasks.length")
 			.col-xs-12 No tasks in this project
 		.no_result.row.middle-xs.center-xs(ng-hide = "filtredTasks.length" ng-if = "tasksctrl.tasks.length")
