--- a/frontend/components/root/rootStyles.styl
+++ b/frontend/components/root/rootStyles.styl
@@ -1,7 +1,7 @@
 #root_container
-	width 80%
+	overflow hidden
 	padding-top 85px
-	margin-left 15%
+	margin-left 200px
 #mock_header
 	display block
 	width 100%
@@ -19,4 +19,4 @@
 
 @media only screen  and (max-width : 480px), screen and (max-device-width: 480px)
 	#root_container
-		padding-top 190px
+		padding-top 90px
