--- a/public/libs/css/generalComponentsStyle.styl
+++ b/public/libs/css/generalComponentsStyle.styl
@@ -31,3 +31,14 @@ main-component()
     background-color #F5F5F5
     :not(i)
         font-family "Montserrat"
+header-style()
+    font-family "Montserrat"
+    text-align center
+    width 100%
+    display inline-block
+    cursor default
+    margin-bottom 35px
+    padding-bottom 15px
+    font-weight bold
+    font-size 40px
+    border-bottom 4px dashed grey
