--- a/frontend/components/reports/reportsStyle.styl
+++ b/frontend/components/reports/reportsStyle.styl
@@ -16,10 +16,10 @@
         padding-left  2%
         padding-right   2%
         padding-bottom 1%
-        border 1px solid border-grey
-        border-radius 10px
-        background-color background-white
-        box-shadow 0px 5px 20px 2px  shadow-grey
+        //border 1px solid border-grey
+        //border-radius 10px
+        //background-color background-white
+        //box-shadow 0px 5px 20px 2px  shadow-grey
     .reports-header
         border-bottom  1px solid border-grey
         h3
