--- a/frontend/components/events/eventEdit.component.styl
+++ b/frontend/components/events/eventEdit.component.styl
@@ -1,6 +1,10 @@
 @import "../../../public/libs/css/generalComponentsStyle.styl"
 .eventsEdit-wrapper
   width 100%
+  .edit-icon
+    position relative
+    right -350px
+    font-size 20px
   .main
     padding 1%
     border 1px solid border-grey
