fix redirect bug in checkins-create

--- a/frontend/components/checkins/checkinsCreate-pug.component.pug
+++ b/frontend/components/checkins/checkinsCreate-pug.component.pug
@@ -26,7 +26,7 @@
                 ng-selected='CheckCr.time[0]')
 
                 div.use-button
-                    div.save-button(ng-click="CheckCr.save()" ng-link='["Checkins List"]') Save
+                    div.save-button(ng-click="CheckCr.save()") Save
 
                 //a(ng-click="CheckCr.save()" )
                 //    i.fa.fa-floppy-o.fa-3x
