#59 - fixed header bugs

--- a/frontend/components/header/header-pug.component.pug
+++ b/frontend/components/header/header-pug.component.pug
@@ -3,8 +3,6 @@ header.header-wrapper
 		header#header
 			.hdr-header
 				img#BSheaderLogo.hdr-logo(src='http://academy.binary-studio.com/resources/logo.png')
-				
-
 
 				div
 					.hdr-buttons
@@ -13,21 +11,22 @@ header.header-wrapper
 						input#searchBar(placeholder='Search')
 						a#userLink.hdr-noTextDecoration
 							#userProfile
-								//img#avatar.hdr-avatar(src='http://team.binary-studio.com/profile/api/files/get/Unknown.png')
-								i.fa.fa-user.fa-2x
+								img#avatar.hdr-avatar(src='https://maxcdn.icons8.com/office/PNG/80/Users/user-80.png')
+								//i.fa.fa-user.fa-lg
 								span#userName Admin
 								span#profileBarArrDwn
 						button#appsBtn.hdr-button
-							img.hdr-appsLogo(src='http://team.binary-studio.com/app/images/Thumbnails.png')
-							// <i class="fa fa-th fa-2x"></i>
+							//img.hdr-appsLogo(src='http://team.binary-studio.com/app/images/Thumbnails.png')
+							i.fa.fa-th.fa-lg.button
 						button#notificationBtn.hdr-button
-							img.hdr-appsLogo(src='http://team.binary-studio.com/app/images/bell.png')
-							// <i class="fa fa-bell-o fa-2x"></i>
+							//img.hdr-appsLogo(src='http://team.binary-studio.com/app/images/bell.png')
+							i.fa.fa-bell-o.fa-lg.button
 					#notificationCounter 13
 					#search
+
 			// INVISIBLE
 			#logOutBox.hdr-headerElements.hdr-invisible
 			#appsBlock.hdr-invisible
 			#notificationBlock.hdr-invisible
 
-	script(src='http://team.binary-studio.com/app/javascripts/header.js')
+	//script(src='http://team.binary-studio.com/app/javascripts/header.js')
