--- a/frontend/components/calendar/calendarMonth/calendarMonth.styl
+++ b/frontend/components/calendar/calendarMonth/calendarMonth.styl
@@ -67,6 +67,7 @@
             col(width='14.28')
             tr
                 width 100%
+                cursor pointer
                 th
                     padding 2%
                     border-style solid
