--- a/frontend/components/reports/reportsStyle.styl
+++ b/frontend/components/reports/reportsStyle.styl
@@ -114,6 +114,14 @@
                 color main-blue
                 display inline-block
                 font-family "FontAwesome"
+        .item-out-group
+            background-color add-text-color
+            span
+                 color main-blue
+        .item-out-group
+            background-color border-grey
+            span
+                 color white
     .history-item
         margin-top 2%
         margin-bottom  2%
