--- a/frontend/components/tasks/tasksTemplate.pug
+++ b/frontend/components/tasks/tasksTemplate.pug
@@ -10,8 +10,8 @@
 				li(ng-click = "tasksctrl.changeFilter('free')") free task
 				li(ng-click = "tasksctrl.changeFilter('my')") my tasks
 				li(ng-click = "tasksctrl.changeFilter('done')") finished
-				li keyword =  
-					input(type="text" ng-model = "tasksctrl.keyword")
+				li(ng-click = "tasksctrl.isHiddenKw = !tasksctrl.isHiddenKw") keyword =
+				input(ng-hide = "tasksctrl.isHiddenKw" type="text" ng-model = "tasksctrl.keyword")
 				li.resetfilter(ng-click = "tasksctrl.changeFilter('none')") reset filters
 		.wrapper_task.row.center-xs(ng-repeat = "task in filtredTasks = (tasksctrl.tasks | filter: tasksctrl.keyword | filter: tasksctrl.filterKey) track by $index", ng-if = "tasksctrl.contentFlag" ,   id="{{task._id}}")
 			.col-xs-12.task_header.row.middle-xs.center-xs
